# OPENC-CV

./: README.md
Ejemplo-12-Threshold-Umbralización-por-Color-y-Espacios-HSV-OpenCV/: Principal.cpp
PracticaU3/: CMakeLists.txt  main.cpp
Proyecto/: CMakeLists.txt
PruebaJuan/: CMakeLists.txt  main.cpp
Práctica-10/: CMakeLists.txt  main.cpp
Práctica-11/: CMakeLists.txt  main.cpp
Práctica-13/: CMakeLists.txt  main.cpp
Práctica-14/14/: CMakeLists.txt  main.cpp
Práctica-8/: CMakeLists.txt  main.cpp
Práctica-9/: CMakeLists.txt  main.cpp
examen/: CMakeLists.txt  main.cpp
operacionesMorfologicas/: CMakeLists.txt  main.cpp
testOPCV/: CMakeLists.txt  main.cpp
testingJC/: CMakeLists.txt  main.cpp
testingJC/Documents/Hide/: Nuevo documento de texto.txt
testingJC/Documents/Hide/ejercicios/: ADA_AUGUSTA_BYRON.txt  ALEX_HERNAN_BENAVIDEZ_ALVARADO.txt  ANGEL_RODRIGO_NACIPUCHA_ZHANAY.txt  BRAULIO_ROMAN_CASTRO_JARA.txt  BYRON_XAVIER_CALVA_BRAVO.txt  CARLOS_HOMERO_MOROCHO_MEDINA.txt  CARL_FRIEDERIC_GAUSS.txt  CESAR_XAVIER_JARRO_AGUIRRE.txt  CHARLES_BRONSON.txt  CHRISTIAN_MAURICIO_PILLAGA_SIGUENCIA.txt  CRISTIAN_LEANDRO_LEON_CHUNIR.txt  DAMIAN_WILFRIDO_SUMBA_LUCERO.txt  DAVID_FERNANDO_EGAS_FEIJOO.txt  EDUARDO_ISMAEL_CASTILLO_CARDENAZ.txt  FANNY_CRISTINA_GUTAMA_GUTAMA.txt  FRANKLIN_GUSTAVO_GUALLPA_GININ.txt  GERMAN_RICARDO_TOBAR_CALLE.txt  JESSICA_KARINA_PANAMA_MAZHENDA.txt  JORDAN_FERNANDO_MURILLO_VALAREZO.txt  JORGE_RENE_AREVALO_PANI.txt  JUAN_CARLOS_BENAVIDES_CABRERA.txt  JUAN_CARLOS_CANAR_UYAGUARI.txt  JULIO_ANDRES_VISCAINO_QUITO.txt  JULIO_VERNE.txt  (+6 more)
(+67 files in other folders)
